@@ -54,6 +54,8 @@ shrike_SOURCES += shaders/LCD.hpp shaders/LCD.cpp
 shrike_SOURCES += shaders/LCDSmall.hpp shaders/LCDSmall.cpp
 shrike_SOURCES += shaders/LafortuneShader.cpp
 shrike_SOURCES += shaders/HairPhysics.cpp
+shrike_SOURCES += shaders/Derivatives.cpp
+shrike_SOURCES += shaders/Checkerboard.cpp
 
 # this is a hack and should be removed eventually
 # shrike_SOURCES += DummyShader.cpp
